; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_sub_16_er_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_sub_16_er_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4
@DY = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_sub_16_er_d() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* @DX, i32** %1, align 8
  %5 = load i32, i32* @DY, align 4
  %6 = call i8* @MASK_OUT_ABOVE_16(i32 %5)
  %7 = ptrtoint i8* %6 to i32
  store i32 %7, i32* %2, align 4
  %8 = load i32*, i32** %1, align 8
  %9 = load i32, i32* %8, align 4
  %10 = call i8* @MASK_OUT_ABOVE_16(i32 %9)
  %11 = ptrtoint i8* %10 to i32
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %2, align 4
  %14 = sub nsw i32 %12, %13
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @NFLAG_16(i32 %15)
  store i32 %16, i32* @FLAG_N, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @CFLAG_16(i32 %17)
  store i32 %18, i32* @FLAG_C, align 4
  store i32 %18, i32* @FLAG_X, align 4
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @VFLAG_SUB_16(i32 %19, i32 %20, i32 %21)
  store i32 %22, i32* @FLAG_V, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i8* @MASK_OUT_ABOVE_16(i32 %23)
  %25 = ptrtoint i8* %24 to i32
  store i32 %25, i32* @FLAG_Z, align 4
  %26 = load i32*, i32** %1, align 8
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @MASK_OUT_BELOW_16(i32 %27)
  %29 = load i32, i32* @FLAG_Z, align 4
  %30 = or i32 %28, %29
  %31 = load i32*, i32** %1, align 8
  store i32 %30, i32* %31, align 4
  ret void
}

declare dso_local i8* @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @NFLAG_16(i32) #1

declare dso_local i32 @CFLAG_16(i32) #1

declare dso_local i32 @VFLAG_SUB_16(i32, i32, i32) #1

declare dso_local i32 @MASK_OUT_BELOW_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
